--- a/src/components/Dropdown.module.css
+++ b/src/components/Dropdown.module.css
@@ -1,6 +1,6 @@
 .container {
   opacity: 0;
-  transition: transform .2s ease, opacity .2s;
+  transition: transform 0.2s ease, opacity 0.2s;
   position: absolute;
   visibility: hidden;
   z-index: 10;
@@ -18,7 +18,7 @@
   }
   &.visible {
     opacity: 1;
-    transform: translateY(0px)!important;
+    transform: translateY(0px) !important;
     visibility: visible;
   }
 }
