--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -4,12 +4,15 @@
   position: fixed;
   top: 0;
   left: 0;
-  padding: 10px;
+  background: rgb(255 116 39 / 50%);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+  padding: 10px 20px;
 }
 
 @media (min-height: 800px) {
   .wrapper {
-    background: #000000CC;
+    background: #000000cc;
     backdrop-filter: blur(20px);
     -webkit-backdrop-filter: blur(20px);
     padding: 10px 20px;
@@ -28,11 +31,11 @@
   display: flex;
   align-items: center;
   gap: 1em;
-  transition: background .2s;
+  transition: background 0.2s;
   border-radius: 5px;
   white-space: nowrap;
   padding: 0px 5px;
-  filter: drop-shadow(-1px 1px 1px #00000033)
+  filter: drop-shadow(-1px 1px 1px #00000033);
 }
 
 .logo:hover {
