--- a/src/ui/Game.module.css
+++ b/src/ui/Game.module.css
@@ -4,7 +4,7 @@
   display: grid;
   grid-template-rows: 1fr max-content;
   position: relative;
-  transition: height .2s ease;
+  transition: height 0.2s ease;
 }
 
 @media (min-height: 820px) {
@@ -22,8 +22,8 @@
 .view {
   height: 100%;
   position: relative;
-  transition: height .2s ease;
-  background: #0c0c11;
+  transition: height 0.2s ease;
+  background: --bg-color;
 }
 
 .controls {
@@ -54,7 +54,8 @@
   0% {
     opacity: 1;
   }
-  30%, 75% {
+  30%,
+  75% {
     opacity: 1;
   }
   100% {
@@ -65,14 +66,14 @@
 @keyframes splash2 {
   0% {
     opacity: 0;
-    transform: scale(.5);
+    transform: scale(0.5);
   }
   30% {
     transform: scale(1);
     opacity: 1;
   }
   75% {
-    transform: scale(.9);
+    transform: scale(0.9);
     opacity: 1;
   }
   100% {
@@ -88,7 +89,7 @@
   width: 100%;
   height: 100%;
   opacity: 0;
-  animation: splash .75s ease;
+  animation: splash 0.75s ease;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -99,9 +100,9 @@
   opacity: 0;
   max-width: min(300px, 90%);
   max-height: min(300px, 25%);
-  animation: splash2 .75s cubic-bezier(0.18, 0.89, 0.32, 1.28);
+  animation: splash2 0.75s cubic-bezier(0.18, 0.89, 0.32, 1.28);
 }
 
 .splash {
-  background: #0c0c11;
+  background: var(--bg-color);
 }
