--- a/src/ui/Home.module.css
+++ b/src/ui/Home.module.css
@@ -8,23 +8,31 @@
 }
 
 .banner {
-  background-image: linear-gradient(0deg, var(--bg-color) 0%, #04051700 110%), url(/banner.png);
+  background-image: linear-gradient(0deg, var(--bg-color) 0%, #04051700 110%),
+    url(/banner.png);
   background-size: cover;
   background-position: center;
   padding-top: 60px;
   min-height: 100vh;
   max-height: -webkit-fill-available;
-  transition: min-height .25s ease;
-  animation: fade-in .5s;
+  transition: min-height 0.25s ease;
+  animation: fade-in 0.5s;
   display: flex;
   flex-direction: column-reverse;
+}
+
+@media screen and (min-width: 600px) {
+  .banner {
+    min-height: min(50vh, 600px);
+    margin-top: 60px !important;
+  }
 }
 
 .banner h1 {
   font-size: 42px;
 }
 
-@media (min-height: 460px) {
+/* @media (min-height: 460px) {
   .banner {
     min-height: 60vh;
   }
@@ -34,4 +42,4 @@
   .banner {
     min-height: min(50vh, 420px);
   }
-}
+} */
