--- a/src/ui/Home.module.css
+++ b/src/ui/Home.module.css
@@ -8,10 +8,10 @@
 }
 
 .banner {
-  background-image: linear-gradient(0deg, var(--bg-color) 0%, #04051700 110%),
+  background-image: linear-gradient(0deg, var(--bg-color) 0%, #04051700 90%),
     url(/banner.png);
   background-size: cover;
-  background-position: center;
+  /* background-position: center; */
   padding-top: 60px;
   min-height: 100vh;
   max-height: -webkit-fill-available;
@@ -21,7 +21,7 @@
   flex-direction: column-reverse;
 }
 
-@media screen and (min-width: 600px) {
+@media (min-width: 600px) {
   .banner {
     min-height: min(50vh, 600px);
     margin-top: 60px !important;
