--- a/src/styles.css
+++ b/src/styles.css
@@ -3,28 +3,28 @@
 }
 
 :root {
-  --background-color: #0b0b0e;
+  --background-color: #121724;
   --text-color: #ffffff;
-  --gamba-ui-primary-color: #9564ff;
+  --gamba-ui-primary-color: #ff3fdd;
 
   --gamba-ui-border-radius: 10px;
 
-  --gamba-ui-button-default-background: #0e0e16;
-  --gamba-ui-button-default-background-hover: #11111d;
-  --gamba-ui-button-default-color: white;
+  --gamba-ui-button-default-background: #ffe42d;
+  --gamba-ui-button-default-background-hover: #ff3fdd;
+  --gamba-ui-button-default-color: black;
 
-  --gamba-ui-button-main-background: #8851ff;
-  --gamba-ui-button-main-color: white;
-  --gamba-ui-button-main-background-hover: #9564ff;
+  --gamba-ui-button-main-background: #ffe42d;
+  --gamba-ui-button-main-color: black;
+  --gamba-ui-button-main-background-hover: #ff3fdd;
 
-  --gamba-ui-input-background: #0e0e16;
+  --gamba-ui-input-background: #ffe42d;
   --gamba-ui-input-color: #ffffff;
   --gamba-ui-input-background-hover: #11111d;
 }
 
 body, input, button, textarea, pre {
   font-family: 'DM Sans', 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-size: 16px;
+  font-size: 20px;
 }
 
 h1, h2 {
@@ -32,7 +32,8 @@ h1, h2 {
 }
 
 body {
-  background: var(--background-color);
+  background-image: url(https://iili.io/3cFIdtn.png;); 
+  background-size: cover; 
   color: var(--text-color);
   cursor: default;
   margin: 0;
