--- a/src/styles.css
+++ b/src/styles.css
@@ -32,7 +32,7 @@ h1, h2 {
 }
 
 body {
-  background-image: url(https://iili.io/3cFIdtn.png;); 
+  background-image: url(https://iili.io/3cMScwN.jpg;); 
   background-size: cover; 
   color: var(--text-color);
   cursor: default;
