--- a/src/styles.css
+++ b/src/styles.css
@@ -13,11 +13,11 @@
   --gamba-ui-button-default-background-hover: #ff3fdd;
   --gamba-ui-button-default-color: black;
 
-  --gamba-ui-button-main-background: #ffe42d;
+  --gamba-ui-button-main-background: #ff3fdd;
   --gamba-ui-button-main-color: black;
   --gamba-ui-button-main-background-hover: #ff3fdd;
 
-  --gamba-ui-input-background: #ffe42d;
+  --gamba-ui-input-background: #ff3fdd;
   --gamba-ui-input-color: #ffffff;
   --gamba-ui-input-background-hover: #11111d;
 }
