--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,7 @@
   --gamba-ui-button-default-background-hover: #ff3fdd;
   --gamba-ui-button-default-color: black;
 
+  --gamba-ui-button-main-background: #ff3fdd;
   --gamba-ui-button-main-color: black;
   --gamba-ui-button-main-background-hover: #ff3fdd;
 
