--- a/src/styles.css
+++ b/src/styles.css
@@ -33,8 +33,7 @@ h1, h2 {
 
 body {
   background-image: url(https://iili.io/3cMScwN.jpg;); 
-  background-size: cover; 
-  background-position: center;
+  background-size: auto; 
   color: var(--text-color);
   cursor: default;
   margin: 0;
