--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@
 :root {
   --background-color: #121724;
   --text-color: #ffffff;
-  --gamba-ui-primary-color: #ff3fdd;
+  --gamba-ui-primary-color: #ffe42d;
 
   --gamba-ui-border-radius: 10px;
 
